deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: hello-world  
spec:  
  replicas: 2  
  selector:  
    matchLabels:  
      app: hello-world  
  template:  
    metadata:  
      labels:  
        app: hello-world  
    spec:  
      containers:  
      - name: hello-world  
        image: nginx:alpine  
        ports:  
        - containerPort: 80
