ingress.yml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: hello-world-ingress  
  annotations:  
    traefik.ingress.kubernetes.io/router.entrypoints: web  
spec:  
  rules:  
  - host: hello-world.local  
    http:  
      paths:  
      - path: /  
        pathType: Prefix  
        backend:  
          service:  
            name: hello-world  
            port:  
              number: 80
